<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



   <TextView
       android:layout_width="match_parent"
       android:id="@+id/tvInput"

       android:layout_height="250dp"
       android:background="@color/blackgreen"
       android:padding="20dp"
       android:textSize="45sp"
       android:gravity="end|bottom"

       android:textColor="@color/white"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/Lightblack"
        >

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onDigit"
            android:text="@string/_7"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onDigit"
            android:text="@string/_8"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onDigit"

            android:text="@string/_9"/>

        <Button
            android:id="@+id/btndivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="#FF6666"
            android:onClick="onOperator"

            android:textSize="22dp"
            android:text="@string/divide"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/Lightblack"
        >

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"

            android:textSize="22dp"
            android:text="@string/_4"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onDigit"

            android:text="@string/_5"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onDigit"

            android:text="@string/_6"/>

        <Button
            android:id="@+id/btnmultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onOperator"

            android:textColor="#FF6666"
            android:text="@string/multiply"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/Lightblack"
        >

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"

            android:textSize="22dp"
            android:text="@string/_1"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"

            android:textSize="22dp"
            android:text="@string/_2"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onDigit"

            android:text="@string/_3"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onOperator"

            android:textColor="#FF6666"
            android:text="@string/minus"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/Lightblack"
        >
        <Button
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="decimalpoint"

            android:text="@string/dot"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onDigit"

            android:text="@string/_0"/>

        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onClear"

            android:textColor="#FF6666"
            android:text="@string/ac"/>

        <Button
            android:id="@+id/btnadd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="22dp"
            android:onClick="onOperator"

            android:textColor="#FF6666"
            android:text="@string/add"/>





    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/Lightblack"
        >

        <Button
            android:id="@+id/btnequalto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:textSize="22dp"
            android:onClick="onEqual"

            android:textColor="#FF6666"
            android:text="@string/equalto" />


    </LinearLayout>


</LinearLayout>